Added translations. Added English translations

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,9 @@
 <footer>
 	<ul>
-		<li><a href="#" >Apie mus</a></li>
-		<li><a href="#" >Spaudai</a></li>
-		<li><a href="#" >Terms</a></li>
-		<li><a href="#" >Kontaktai</a></li>
+		<li><a href="#">{{ 'FOOTER.ABOUT_US' | translate }}</a></li>
+		<li><a href="#">{{ 'FOOTER.PRESS' | translate }}</a></li>
+		<li><a href="#">{{ 'FOOTER.TERMS' | translate }}</a></li>
+		<li><a href="#">{{ 'FOOTER.CONTACT_US' | translate }}</a></li>
 	</ul>
 	<!--<div class="images-references">
 		<div class="flaticon">
