--- a/src/app/spotters/spotters.component.html
+++ b/src/app/spotters/spotters.component.html
@@ -26,22 +26,22 @@
 	</div>
 	<spotters-join></spotters-join>
 	<div class="row benefits">
-	  <h2>Narystės privalumai</h2>
+	  <h2>{{ 'SPOTTERS.ADVANTAGES' | translate }}</h2>
 	  <div class="list-group benefits-list">
 	    <a class="list-group-item">
 				<span class="glyphicon glyphicon-link addon"></span>
-	      <h4 class="list-group-item-heading">Susiek vietą su savo paskyra</h4>
-	      <p class="list-group-item-text hidden-xs">Tokiu būdų visi galės pamatyti, jog tu pasidalinai šia vieta</p>
+	      <h4 class="list-group-item-heading">{{ 'SPOTTERS.CONNECT_SPOT_WITH_YOU' | translate }}</h4>
+	      <p class="list-group-item-text hidden-xs">{{ 'SPOTTERS.CONNECT_SPOT_WITH_YOU_COMMENT' | translate }}</p>
 	    </a>
 	    <a class="list-group-item">
 				<span class="glyphicon glyphicon-heart addon"></span>
-	      <h4 class="list-group-item-heading">Išsaugok savo mėgstamiausias vietas</h4>
-	      <p class="list-group-item-text hidden-xs">Puikus būdas prisiminti geriausias sporto vietas rajone ar mieste.</p>
+	      <h4 class="list-group-item-heading">{{ 'SPOTTERS.SAVE_YOUR_FAVORITE_SPOTS' | translate }}</h4>
+	      <p class="list-group-item-text hidden-xs">{{ 'SPOTTERS.SAVE_YOUR_FAVORITE_SPOTS_COMMENT' | translate }}</p>
 	    </a>
 	    <a class="list-group-item">
 				<span class="glyphicon glyphicon-thumbs-up addon"></span>
-	      <h4 class="list-group-item-heading">Būk geriausias</h4>
-	      <p class="list-group-item-text hidden-xs">Žymėk vietas ir atsidurk tarp geriausių narių</p>
+	      <h4 class="list-group-item-heading">{{ 'SPOTTERS.BE_THE_BEST' | translate }}</h4>
+	      <p class="list-group-item-text hidden-xs">{{ 'SPOTTERS.BE_THE_BEST_COMMENT' | translate }}</p>
 	    </a>
 	  </div>
 	</div>
