--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<div class="row">
-		<h2>Arba</h2>
+		<h2>{{ 'OTHER.OR' | translate }}</h2>
 	</div>
 	<div class="row login-items">
 		<div class="col-md-4 col-sm-4 login-item" id="fb">
@@ -11,7 +11,7 @@
 				<div class="col-xs-4 visible-xs thumb">
 					<img src="/sportenjoy/assets/images/facebook-logo.png" width="80px"/>
 				</div>
-				<h4 class="col-xs-8 col-sm-12">Prisijungti su Facebook</h4>
+				<h4 class="col-xs-8 col-sm-12">{{ 'LOGIN.LOGIN_WITH' | translate }} Facebook</h4>
 			</a>
 		</div>
 		<div class="col-md-4 col-sm-4 login-item" id="google">
@@ -22,7 +22,7 @@
 				<div class="col-xs-4 visible-xs thumb">
 					<img src="/sportenjoy/assets/images/google-plus-logo.png" width="80px"/>
 				</div>
-				<h4 class="col-xs-8 col-sm-12">Prisijungti su Google+</h4>
+				<h4 class="col-xs-8 col-sm-12">{{ 'LOGIN.LOGIN_WITH' | translate }} Google+</h4>
 			</a>
 		</div>
 		<div class="col-md-4 col-sm-4 login-item">
@@ -33,7 +33,7 @@
 				<div class="col-xs-4 visible-xs thumb">
 					<img src="/sportenjoy/assets/images/login-logo.png" width="80px"/>
 				</div>
-				<h4 class="col-xs-8 col-sm-12">Priminti slaptažodį</h4>
+				<h4 class="col-xs-8 col-sm-12">{{ 'LOGIN.FORGOT_PASSWORD' | translate }}</h4>
 			</a>
 		</div>
 	</div>
