--- a/src/app/review/review.component.html
+++ b/src/app/review/review.component.html
@@ -1,20 +1,20 @@
 <div class="container-fluid">
 	<div class="row">
-		<h2 class="hidden-xs">Peržiūrėti</h2>
+		<h2 class="hidden-xs">{{ 'TITLES.REVIEW' | translate }}</h2>
 	</div>
 	<div class="row">
 		<div id="review" class="col-md-offset-1 col-md-10">
 			<div class="panel panel-primary">
-				<div class="panel-heading">Neperžiūrėtos vietos</div>
+				<div class="panel-heading">{{ 'REVIEW.UNREVIEWED_SPOTS' | translate }}</div>
 				<table class="table table-hover spots">
 					<thead>
 						<tr>
 							<th>#</th>
-							<th>Pavadinimas</th>
-							<th>Kategorija</th>
-							<th class="hidden-xs">Vieta</th>
-							<th class="hidden-xs">Sukurta</th>
-							<th>Narys</th>
+							<th>{{ 'SPOT.TITLE' | translate }}</th>
+							<th>{{ 'SPOT.CATEGORY' | translate }}</th>
+							<th class="hidden-xs">{{ 'SPOT.LOCATION' | translate }}</th>
+							<th class="hidden-xs">{{ 'SPOT.CREATED' | translate }}</th>
+							<th>{{ 'SPOT.SPOTTER' | translate }}</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -22,14 +22,14 @@
 							[routerLink]="['/spot', spot.id]">
 							<td>{{ spot.id }}</td>
 							<td>{{ spot.title }}</td>
-							<td>{{ spot.category }}</td>
+							<td>{{ prettify(spot.category) | translate }}</td>
 							<td class="hidden-xs">{{ spot.city }}, {{ spot.country }}</td>
 							<td class="hidden-xs">{{ spot.created_at | date:'mediumDate' }}</td>
 							<td>{{ spot.user_id }}</td>
 						</tr>
 					</tbody>
 				</table>
-				<div *ngIf="spots && !spots.length" class="panel-footer">Šiuo metu neperžiūrėtų vietų nėra</div>
+				<div *ngIf="spots && !spots.length" class="panel-footer">{{ 'REVIEW.NO_UNREVIEWED_SPOTS' | translate }}</div>
 			</div>
 		</div>
 	</div>
