--- a/src/app/shared/spotters-join/spotters-join.directive.html
+++ b/src/app/shared/spotters-join/spotters-join.directive.html
@@ -1,22 +1,22 @@
 <div class="row" id="spotter">
-    <h1>Prisijunk</h1>
-    <h3>Pasidalink vietomis ir tu. Tai paprasta!</h3>
-    <p>Pažymėk savo mėgstamiausią sporto aikštelę taip padėdamas ją atrasti kitiems.</p>
+    <h1>{{ 'SPOTTERS_JOIN.JOIN' | translate }}</h1>
+    <h3>{{ 'SPOTTERS_JOIN.BECOME_PART' | translate }}</h3>
+    <p>{{ 'SPOTTERS_JOIN.SHARE_SPOTS' | translate }}</p>
     <div class="container dotted">
         <div class="row">
             <div class="col-md-3 col-xs-3">
                 <img src="/sportenjoy/assets/images/signup-icon.png" />
-                <span>Registruokis</span>
+                <span>{{ 'SPOTTERS_JOIN.SIGN_UP' | translate }}</span>
             </div>
             <img class="arrow col-md-1 col-xs-1" src="/sportenjoy/assets/images/arrow.png" />
             <div class="col-md-3 col-xs-3">
                 <img src="/sportenjoy/assets/images/find-icon.png" />
-                <span>Atrask</span>
+                <span>{{ 'SPOTTERS_JOIN.DISCOVER' | translate }}</span>
             </div>
             <img class="arrow col-md-1 col-xs-1" src="/sportenjoy/assets/images/arrow.png" />
             <div class="col-md-3 col-xs-3">
                 <img src="/sportenjoy/assets/images/spot-icon.png" />
-                <span>Pasidalink</span>
+                <span>{{ 'SPOTTERS_JOIN.SHARE' | translate }}</span>
             </div>
         </div>
     </div>
