--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,18 +1,18 @@
-<div class="wrap container-fluid">
+<div class="container-fluid">
 	<div class="row">
-		<h2 class="hidden-xs">Vartotojai</h2>
+		<h2 class="hidden-xs">{{ 'TITLES.USERS' | translate }}</h2>
 		<div id="review" class="col-md-offset-1 col-md-10">
 			<div class="panel panel-primary">
-				<div class="panel-heading">Visi vartotojai</div>
+				<div class="panel-heading">{{ 'USERS.ALL_USERS' | translate }}</div>
 				<table class="table table-hover spots">
 					<thead>
 						<tr>
 							<th>#</th>
-							<th>El. paštas</th>
-							<th class="hidden-xs">Vieta</th>
-							<th class="hidden-xs">Pažymėjo vietų</th>
-							<th>Statusas</th>
-							<th class="hidden-xs">Prisiregistravo</th>
+							<th>{{ 'USER.EMAIL' | translate }}</th>
+							<th class="hidden-xs">{{ 'USER.LOCATION' | translate }}</th>
+							<th class="hidden-xs">{{ 'USERS.SPOTS_MARKED' | translate }}</th>
+							<th>{{ 'USER.STATUS' | translate }}</th>
+							<th class="hidden-xs">{{ 'USER.REGISTRATION_DATE' | translate }}</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -22,11 +22,13 @@
 							<td>{{ user.email }}</td>
 							<td class="hidden-xs">{{ user.location }}</td>
 							<td class="hidden-xs">{{ user.spotsMarked }}</td>
-							<td>{{ userStatus(user) }}</td>
+							<td>{{ userStatus(user) | translate }}</td>
 							<td class="hidden-xs">{{ user.created_at | date:'mediumDate' }}</td>
 						</tr>
 					</tbody>
 				</table>
+				<div *ngIf="users && !users.length" class="panel-footer">{{ 'OTHER.ERROR' | translate }} {{ 'USERS.NO_USERS' | translate }}</div>
+			</div>
 		</div>
 	</div>
 </div>
