hide spotter ad graphics on smart phones and tablets

--- a/src/app/shared/spotters-join/spotters-join.directive.html
+++ b/src/app/shared/spotters-join/spotters-join.directive.html
@@ -2,7 +2,7 @@
     <h1>{{ 'SPOTTERS_JOIN.JOIN' | translate }}</h1>
     <h3>{{ 'SPOTTERS_JOIN.BECOME_PART' | translate }}</h3>
     <p>{{ 'SPOTTERS_JOIN.SHARE_SPOTS' | translate }}</p>
-    <div class="container dotted">
+    <div class="container dotted hidden-xs hidden-sm">
         <div class="row">
             <div class="col-md-3 col-xs-3">
                 <img src="/sportenjoy/assets/images/signup-icon.png" />
