--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -16,7 +16,6 @@ a {
 
 .login-item {
 		text-align: center;
-		padding: 0;
 		background: #203a4c;
 }
 .login-item#fb {
@@ -32,20 +31,20 @@ a {
 	margin-top: 40px;
 	margin-bottom: 20px;
 }
-.login-items h4 {
+.login-item h4 {
 	border-top: 1px solid #fff;
 	color: #fff;
 	padding: 15px 20px;
 	margin: 0;
 	line-height: 25px;
 }
-.login-items a {
+.login-item a {
 	width: 100%;
 	display: inline-block;
 }
 
 @media (max-width: 767px) {
-	.login-items h4 {
+	.login-item h4 {
 		border: 0;
 		padding: 0;
 		line-height: 80px;
