--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,39 +2,45 @@
 	<div class="row">
 		<h2>{{ 'OTHER.OR' | translate }}</h2>
 	</div>
-	<div class="row login-items">
+	<div class="row">
 		<div class="col-md-4 col-sm-4 login-item" id="fb">
-			<a href="">
+			<div class="row">
 				<div class="hidden-xs logo">
 					<img src="/sportenjoy/assets/images/facebook-logo.png" />
 				</div>
 				<div class="col-xs-4 visible-xs thumb">
 					<img src="/sportenjoy/assets/images/facebook-logo.png" width="80px"/>
 				</div>
-				<h4 class="col-xs-8 col-sm-12">{{ 'LOGIN.LOGIN_WITH' | translate }} Facebook</h4>
-			</a>
+				<div class="col-xs-8 col-sm-12">
+					<h4>{{ 'LOGIN.LOGIN_WITH' | translate }} Facebook</h4>
+				</div>
+			</div>
 		</div>
 		<div class="col-md-4 col-sm-4 login-item" id="google">
-			<a href="">
+			<div class="row">
 				<div class="hidden-xs logo">
 					<img src="/sportenjoy/assets/images/google-plus-logo.png" />
 				</div>
 				<div class="col-xs-4 visible-xs thumb">
 					<img src="/sportenjoy/assets/images/google-plus-logo.png" width="80px"/>
 				</div>
-				<h4 class="col-xs-8 col-sm-12">{{ 'LOGIN.LOGIN_WITH' | translate }} Google+</h4>
-			</a>
+				<div class="col-xs-8 col-sm-12">
+					<h4>{{ 'LOGIN.LOGIN_WITH' | translate }} Google+</h4>
+				</div>
+			</div>
 		</div>
 		<div class="col-md-4 col-sm-4 login-item">
-			<a href="">
+			<div class="row">
 				<div class="hidden-xs logo">
 					<img src="/sportenjoy/assets/images/login-logo.png" />
 				</div>
 				<div class="col-xs-4 visible-xs thumb">
 					<img src="/sportenjoy/assets/images/login-logo.png" width="80px"/>
 				</div>
-				<h4 class="col-xs-8 col-sm-12">{{ 'LOGIN.FORGOT_PASSWORD' | translate }}</h4>
-			</a>
+				<div class="col-xs-8 col-sm-12">
+					<h4>{{ 'LOGIN.FORGOT_PASSWORD' | translate }}</h4>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
