--- a/src/app/header/login-form/login-form.component.css
+++ b/src/app/header/login-form/login-form.component.css
@@ -42,6 +42,9 @@ h2 {
     border-radius: 0;
     font-size: 18px;
 }
+.error {
+    padding: 0 50px;
+}
 #register {
     padding: 50px;
     font-size: 16px;
