--- a/src/app/header/login-form/login-form.component.html
+++ b/src/app/header/login-form/login-form.component.html
@@ -17,9 +17,9 @@
             </form>
         </div>
     </div>
-    <div class="row">
+    <div class="row error">
         <div *ngIf="errorMessage" class="alert alert-danger">
-            {{ 'OTHER.ERROR' | translate }} {{ errorMessage }}
+            {{ 'OTHER.ERROR' | translate }} {{ errorMessage | translate }}
         </div>
     </div>
     <div class="row" id="register">
