--- a/src/app/header/search-form/search-form.component.html
+++ b/src/app/header/search-form/search-form.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div *ngIf="'HEADER.TITLE' | translate" class="container">
 	<h2>{{ 'HEADER.TITLE' | translate }} !</h2>
 	<div class="row">
 		<div class="tab-content">
